@@ -717,6 +717,8 @@ ags_fx_envelope_audio_get_type
 ags_fx_envelope_audio_new
 ags_fx_lv2_channel_processor_get_type
 ags_fx_lv2_channel_processor_new
+ags_fx_low_pass_audio_signal_get_type
+ags_fx_low_pass_audio_signal_new
 ags_fx_lfo_channel_get_type
 ags_fx_lfo_channel_new
 ags_fx_eq10_audio_signal_get_type
@@ -743,12 +745,16 @@ ags_fx_playback_channel_processor_get_type
 ags_fx_playback_channel_processor_new
 ags_fx_buffer_recycling_get_type
 ags_fx_buffer_recycling_new
+ags_fx_high_pass_recycling_get_type
+ags_fx_high_pass_recycling_new
 ags_fx_eq10_audio_processor_get_type
 ags_fx_eq10_audio_processor_new
 ags_fx_playback_recycling_get_type
 ags_fx_playback_recycling_new
 ags_fx_ladspa_audio_get_type
 ags_fx_ladspa_audio_new
+ags_fx_low_pass_recycling_get_type
+ags_fx_low_pass_recycling_new
 ags_fx_analyse_audio_get_type
 ags_fx_analyse_audio_new
 ags_fx_envelope_recycling_get_type
@@ -782,6 +788,8 @@ ags_fx_two_pass_aliase_channel_input_get_final_mix
 ags_fx_two_pass_aliase_channel_new
 ags_fx_volume_recycling_get_type
 ags_fx_volume_recycling_new
+ags_fx_high_pass_audio_get_type
+ags_fx_high_pass_audio_new
 ags_fx_ladspa_audio_processor_get_type
 ags_fx_ladspa_audio_processor_new
 ags_fx_lfo_channel_processor_get_type
@@ -798,10 +806,14 @@ ags_fx_analyse_channel_processor_get_type
 ags_fx_analyse_channel_processor_new
 ags_fx_notation_channel_processor_get_type
 ags_fx_notation_channel_processor_new
+ags_fx_low_pass_channel_get_type
+ags_fx_low_pass_channel_new
 ags_fx_two_pass_aliase_audio_signal_get_type
 ags_fx_two_pass_aliase_audio_signal_new
 ags_fx_two_pass_aliase_recycling_get_type
 ags_fx_two_pass_aliase_recycling_new
+ags_fx_high_pass_audio_processor_get_type
+ags_fx_high_pass_audio_processor_new
 ags_fx_ladspa_recycling_get_type
 ags_fx_ladspa_recycling_new
 ags_fx_lv2_audio_get_type
@@ -865,6 +877,8 @@ ags_fx_pattern_audio_signal_get_type
 ags_fx_pattern_audio_signal_stream_feed
 ags_fx_pattern_audio_signal_notify_remove
 ags_fx_pattern_audio_signal_new
+ags_fx_low_pass_audio_processor_get_type
+ags_fx_low_pass_audio_processor_new
 ags_fx_volume_channel_processor_get_type
 ags_fx_volume_channel_processor_new
 ags_fx_buffer_audio_processor_get_type
@@ -928,20 +942,30 @@ ags_fx_notation_audio_processor_counter_change
 ags_fx_notation_audio_processor_new
 ags_fx_notation_recycling_get_type
 ags_fx_notation_recycling_new
+ags_fx_high_pass_audio_signal_get_type
+ags_fx_high_pass_audio_signal_new
 ags_fx_lv2_audio_processor_get_type
 ags_fx_lv2_audio_processor_new
 ags_fx_volume_audio_processor_get_type
 ags_fx_volume_audio_processor_new
 ags_fx_pattern_channel_get_type
 ags_fx_pattern_channel_new
+ags_fx_low_pass_audio_get_type
+ags_fx_low_pass_audio_new
+ags_fx_high_pass_channel_get_type
+ags_fx_high_pass_channel_new
 ags_fx_buffer_channel_processor_get_type
 ags_fx_buffer_channel_processor_new
 ags_fx_lfo_audio_signal_get_type
 ags_fx_lfo_audio_signal_new
+ags_fx_high_pass_channel_processor_get_type
+ags_fx_high_pass_channel_processor_new
 ags_fx_peak_audio_processor_get_type
 ags_fx_peak_audio_processor_new
 ags_fx_lv2_recycling_get_type
 ags_fx_lv2_recycling_new
+ags_fx_low_pass_channel_processor_get_type
+ags_fx_low_pass_channel_processor_new
 ags_fx_playback_audio_processor_get_type
 ags_fx_playback_audio_processor_data_put
 ags_fx_playback_audio_processor_data_get
@@ -2696,6 +2720,17 @@ ags_midi_util_is_song_position
 ags_midi_util_is_song_select
 ags_midi_util_is_tune_request
 ags_midi_util_is_meta_event
+ags_midi_util_get_key_on
+ags_midi_util_get_key_off
+ags_midi_util_get_key_pressure
+ags_midi_util_get_change_parameter
+ags_midi_util_get_pitch_bend
+ags_midi_util_get_change_program
+ags_midi_util_get_change_pressure
+ags_midi_util_get_sysex
+ags_midi_util_get_quarter_frame
+ags_midi_util_get_song_position
+ags_midi_util_get_song_select
 ags_midi_util_to_smf
 ags_midi_util_delta_time_to_offset
 ags_midi_util_offset_to_delta_time
@@ -3197,7 +3232,45 @@ ags_phase_shift_util_compute_float
 ags_phase_shift_util_compute_double
 ags_phase_shift_util_compute_complex
 ags_audio_application_context_get_type
+ags_audio_application_context_loader_timeout
 ags_audio_application_context_new
+ags_time_stretch_util_get_type
+ags_time_stretch_util_alloc
+ags_time_stretch_util_copy
+ags_time_stretch_util_free
+ags_time_stretch_util_get_source
+ags_time_stretch_util_set_source
+ags_time_stretch_util_get_source_stride
+ags_time_stretch_util_set_source_stride
+ags_time_stretch_util_get_source_buffer_length
+ags_time_stretch_util_set_source_buffer_length
+ags_time_stretch_util_get_destination
+ags_time_stretch_util_set_destination
+ags_time_stretch_util_get_destination_stride
+ags_time_stretch_util_set_destination_stride
+ags_time_stretch_util_get_destination_buffer_length
+ags_time_stretch_util_set_destination_buffer_length
+ags_time_stretch_util_get_buffer_size
+ags_time_stretch_util_set_buffer_size
+ags_time_stretch_util_get_format
+ags_time_stretch_util_set_format
+ags_time_stretch_util_get_samplerate
+ags_time_stretch_util_set_samplerate
+ags_time_stretch_util_get_frequency
+ags_time_stretch_util_set_frequency
+ags_time_stretch_util_get_orig_bpm
+ags_time_stretch_util_set_orig_bpm
+ags_time_stretch_util_get_new_bpm
+ags_time_stretch_util_set_new_bpm
+ags_time_stretch_util_stretch_s8
+ags_time_stretch_util_stretch_s16
+ags_time_stretch_util_stretch_s24
+ags_time_stretch_util_stretch_s32
+ags_time_stretch_util_stretch_s64
+ags_time_stretch_util_stretch_float
+ags_time_stretch_util_stretch_double
+ags_time_stretch_util_stretch_complex
+ags_time_stretch_util_stretch
 ags_frequency_aliase_util_get_type
 ags_frequency_aliase_util_compute_s8
 ags_frequency_aliase_util_compute_s16
